# thermal-printer

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust_ci.yml
.zed/: settings.json
src/: config.rs  glue.rs  index.html  lib.rs  net.rs  power.rs  prelude.rs  printer.rs  shutdown.rs  web.rs  wifi.rs
src/glue/: esp32.rs  shared.rs
src/glue/esp32/: power.rs  printer.rs  rng.rs  wifi.rs
src/net/: dns.rs  index.html  mqtt.rs  web.rs  wifi.rs
