[package]
edition = "2021"
name = "webserver-html"
version = "0.1.0"

[[bin]]
name = "webserver-html"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0"
esp-bootloader-esp-idf = "0.1"
esp-hal = { version = "=1.0.0-beta.1", features = [
    "defmt",
    "esp32",
    "unstable",
] }
embassy-net = { version = "0.7", features = [
    "defmt",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "tcp",
    "udp",
] }
embedded-io = { version = "0.6", features = ["defmt-03"] }
embedded-io-async = { version = "0.6", features = ["defmt-03"] }
esp-alloc = { version = "0.8", features = ["defmt"] }
esp-backtrace = { version = "0.16", features = [
    "defmt",
    "esp32",
    "exception-handler",
    "panic-handler",
] }
esp-println = { version = "0.14", features = ["defmt-espflash", "esp32"] }
critical-section = "1.2"
embassy-executor = { version = "0.7", features = [
    "defmt",
    "task-arena-size-65536",
] }
embassy-time = { version = "0.4", features = ["defmt"] }
esp-hal-embassy = { version = "0.8", features = ["defmt", "esp32"] }
esp-wifi = { version = "0.14", features = [
    "builtin-scheduler",
    "defmt",
    "esp-alloc",
    "esp32",
    "wifi",
] }
static_cell = { version = "2.1", features = ["nightly"] }
picoserve = { version = "0.16", features = ["defmt", "embassy"] }
heapless = { version = "0.8", features = ["defmt-03", "serde"] }
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "rc",
] }
embassy-sync = { version = "0.7", features = ["defmt"] }
rust-mqtt = { version = "0.3.0", default-features = false, features = ["no_std"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
