[package]
edition = "2021"
name = "webserver-html"
version = "0.1.0"

[[bin]]
name = "webserver-html"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0"
critical-section = "1.2"
esp-bootloader-esp-idf = { version = "0.2", features = ["esp32"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["defmt", "esp32", "unstable"] }
esp-alloc = { version = "0.8", features = ["defmt"] }
esp-backtrace = { version = "0.17", features = [
    "defmt",
    "esp32",
    "exception-handler",
    "panic-handler",
] }
esp-println = { version = "0.15", features = ["defmt-espflash", "esp32"] }
esp-wifi = { version = "0.15", features = [
    "builtin-scheduler",
    "defmt",
    "esp-alloc",
    "esp32",
    "wifi",
] }
esp-hal-embassy = { version = "0.9", features = ["defmt", "esp32"] }
embassy-executor = { version = "0.7", features = [
    "defmt",
    "task-arena-size-20480",
] }
embassy-net = { version = "0.7", features = [
    "defmt",
    "dhcpv4",
    "proto-ipv4",
    "medium-ethernet",
    "dns",
    "tcp",
    "udp",
    "alloc",
] }
embassy-time = { version = "0.5", features = ["defmt"] }
embassy-futures = { version = "0.1", features = ["defmt"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embedded-io = { version = "0.6", features = ["defmt-03"] }
embedded-io-async = { version = "0.6", features = ["defmt-03"] }
static_cell = { version = "2.1", features = ["nightly"] }
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "rc",
] }
picoserve = { version = "0.16", features = ["defmt", "embassy"] }
rust-mqtt = { version = "0.3", default-features = false, features = ["no_std"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
